--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography h-dvh w-screen mat-app-background">
+<body class="mat-typography mat-app-background min-h-screen w-screen">
 <app-root></app-root>
 </body>
 </html>
