--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ShiroQuestions</title>
+  <title>shiro-questions</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="public/favicon.ico" rel="icon" type="image/x-icon">
