--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>shiro-questions</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="public/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="/favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
