Add solve and delete questions

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link href="/favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preconnect" href="https://picsum.photos">
 </head>
 <body class="mat-typography mat-app-background min-h-screen">
 <app-root></app-root>
